[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://ArtWork/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://UI/Health_Under.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Sword.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Health_Over.png" type="Texture" id=5]
[ext_resource path="res://UI/Heart.png" type="Texture" id=6]
[ext_resource path="res://UI/Health_Progress.png" type="Texture" id=7]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Stamina.gd" type="Script" id=9]
[ext_resource path="res://UI/BRG.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.7, 2.6 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Stretch"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.7, 2.6 ), Vector2( 3.3, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 7.0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14.6603, 26.5 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.975, 1 )
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
playback_speed = 7.0
anims/Idle = SubResource( 1 )
anims/Kill = SubResource( 2 )
anims/Reset = SubResource( 6 )
anims/Run = SubResource( 3 )
anims/Stretch = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 7.5
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="DashTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="DashCoolDown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
scale = Vector2( 2.7, 2.6 )
texture = ExtResource( 2 )
vframes = 2
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.9, -5.5 )
shape = SubResource( 5 )

[node name="TimeTillNextGhost" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 1.8, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 1.75, -5.5 )
shape = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sword" parent="." instance=ExtResource( 4 )]

[node name="InvisibilityTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="HUD/GUI" instance=ExtResource( 8 )]

[node name="Sprite" type="Sprite" parent="HUD/GUI/HealthBar"]
position = Vector2( 32, 24 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 6 )

[node name="Stamina" type="TextureProgress" parent="HUD/GUI"]
self_modulate = Color( 0.882353, 0.882353, 0, 1 )
margin_left = 72.0
margin_top = 64.0
margin_right = 136.0
margin_bottom = 104.0
rect_scale = Vector2( 2.5, 1.5 )
value = 100.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 7 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="HUD/GUI/Stamina"]
position = Vector2( -16, 7.5 )
scale = Vector2( 0.429, 0.75 )
texture = ExtResource( 10 )

[node name="Stamina Timer" type="Timer" parent="HUD/GUI/Stamina"]
wait_time = 2.0
autostart = true

[node name="StaminaCooldowm" type="Timer" parent="HUD/GUI/Stamina"]
wait_time = 10.0
one_shot = true
[connection signal="damaged" from="." to="HUD/GUI/Stamina" method="_on_Player_damaged"]
[connection signal="stamina_updated" from="." to="HUD/GUI/Stamina" method="_on_Player_stamina_updated"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashCoolDown" to="." method="_on_DashCoolDown_timeout"]
[connection signal="timeout" from="TimeTillNextGhost" to="." method="_on_TimeTillNextGhost_timeout"]
[connection signal="timeout" from="InvisibilityTimer" to="." method="_on_InvisibilityTimer_timeout"]
[connection signal="timeout" from="HUD/GUI/Stamina/Stamina Timer" to="HUD/GUI/Stamina" method="_on_Stamina_Timer_timeout"]
[connection signal="timeout" from="HUD/GUI/Stamina/StaminaCooldowm" to="HUD/GUI/Stamina" method="_on_StaminaCooldowm_timeout"]
